Switch default background color to white to avoid color flicker

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -13,8 +13,8 @@ body, html {
 }
 
 body {
-    background-color: #0000FF; /* default background color */
-    color: #FFFFFF;
+    background-color: #FFFFFF; /* default background color */
+    color: #000000;
     display: flex;
     flex-direction: column;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
